--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,19 +5,37 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
 
-    <com.aliya.view.fitsys.FitWindowsFrameLayout
+    <!--会阻断传递-->
+    <!--<LinearLayout-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:background="#0f0"-->
+        <!--android:fitsSystemWindows="true">-->
+    <!--</LinearLayout>-->
+
+    <com.aliya.view.fitsys.FitWindowsLinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="#f00"
         android:fitsSystemWindows="true"
+        android:orientation="vertical"
         app:fitType="top">
 
         <View
             android:layout_width="match_parent"
-            android:layout_height="24dp"
+            android:layout_height="48dp"
             android:background="#345667" />
 
-    </com.aliya.view.fitsys.FitWindowsFrameLayout>
+        <com.aliya.view.fitsys.FitWindowsFrameLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@color/colorPrimary"
+            android:fitsSystemWindows="true"
+            app:fitType="bottom">
+
+        </com.aliya.view.fitsys.FitWindowsFrameLayout>
+
+    </com.aliya.view.fitsys.FitWindowsLinearLayout>
 
     <com.aliya.view.fitsys.FitWindowsFrameLayout
         android:layout_width="match_parent"
@@ -39,7 +57,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
         android:background="#f00"
-        android:fitsSystemWindows="true" >
+        android:fitsSystemWindows="true">
 
         <View
             android:layout_width="match_parent"
@@ -49,14 +67,10 @@
     </com.aliya.view.fitsys.FitWindowsFrameLayout>
 
     <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_marginTop="10dp"
-        android:layout_height="100dp">
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:background="#0f0"
+    android:fitsSystemWindows="true">
     </LinearLayout>
-
-    <RelativeLayout
-        android:layout_width="wrap_content"
-        android:layout_height="match_parent"></RelativeLayout>
-
 
 </LinearLayout>
