--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,9 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<com.aliya.view.fitsys.FitWindowsLinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
+    android:id="@+id/root_view"
     android:layout_height="match_parent"
-    android:orientation="vertical">
+    android:background="#535455"
+    android:fitsSystemWindows="true"
+    android:orientation="vertical"
+    app:fitType="top">
 
     <!--会阻断传递-->
     <com.aliya.view.fitsys.FitWindowsLinearLayout
@@ -11,7 +15,7 @@
         android:layout_height="wrap_content"
         android:background="#f00"
         android:fitsSystemWindows="true"
-        app:fitType="bottom">
+        app:fitType="top">
 
         <!--<LinearLayout-->
         <!--android:layout_width="match_parent"-->
@@ -31,6 +35,12 @@
         android:background="#00f"
         android:fitsSystemWindows="true"
         app:fitType="top" />
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:onClick="onClick"
+        android:text="添加子View" />
 
     <!--<LinearLayout-->
     <!--android:layout_width="match_parent"-->
@@ -91,4 +101,4 @@
     <!--android:background="#0f0"-->
     <!--android:fitsSystemWindows="true"></LinearLayout>-->
 
-</LinearLayout>
+</com.aliya.view.fitsys.FitWindowsLinearLayout>
