--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,104 +1,53 @@
 <?xml version="1.0" encoding="utf-8"?>
 <com.aliya.view.fitsys.FitWindowsLinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="match_parent"
     android:id="@+id/root_view"
+    android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#535455"
+    android:background="#f00"
     android:fitsSystemWindows="true"
     android:orientation="vertical"
+    app:fitFutureChild="true"
+    app:fitIgnoreConsume="false"
     app:fitType="top">
 
-    <!--会阻断传递-->
-    <com.aliya.view.fitsys.FitWindowsLinearLayout
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="#f00"
-        android:fitsSystemWindows="true"
-        app:fitType="top">
+        android:background="#535455"
+        android:orientation="vertical">
 
-        <!--<LinearLayout-->
-        <!--android:layout_width="match_parent"-->
-        <!--android:layout_height="wrap_content"-->
-        <!--android:background="#345667" />-->
         <com.aliya.view.fitsys.FitWindowsLinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="#0f0"
-            android:fitsSystemWindows="true" />
+            android:layout_marginTop="30dp"
+            android:background="#f00"
+            android:fitsSystemWindows="true"
+            app:fitIgnoreConsume="true"
+            app:fitType="top">
 
-    </com.aliya.view.fitsys.FitWindowsLinearLayout>
+            <com.aliya.view.fitsys.FitWindowsLinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="#0f0"
+                android:fitsSystemWindows="true"
+                app:fitIgnoreConsume="false" />
 
-    <com.aliya.view.fitsys.FitWindowsLinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="#00f"
-        android:fitsSystemWindows="true"
-        app:fitType="top" />
+        </com.aliya.view.fitsys.FitWindowsLinearLayout>
 
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:onClick="onClick"
-        android:text="添加子View" />
+        <com.aliya.view.fitsys.FitWindowsLinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="#00f"
+            android:fitsSystemWindows="true"
+            app:fitType="top" />
 
-    <!--<LinearLayout-->
-    <!--android:layout_width="match_parent"-->
-    <!--android:layout_height="wrap_content"-->
-    <!--android:fitsSystemWindows="true"-->
-    <!--android:background="#345667" />-->
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:onClick="onClick"
+            android:text="添加子View" />
 
-    <!--</com.aliya.view.fitsys.FitWindowsLinearLayout>-->
-
-    <!--<com.aliya.view.fitsys.FitWindowsLinearLayout-->
-    <!--android:layout_width="match_parent"-->
-    <!--android:layout_height="wrap_content"-->
-    <!--android:background="#f00"-->
-    <!--android:fitsSystemWindows="true"-->
-    <!--android:orientation="vertical"-->
-    <!--app:fitType="top">-->
-
-
-    <!--<com.aliya.view.fitsys.FitWindowsFrameLayout-->
-    <!--android:layout_width="match_parent"-->
-    <!--android:layout_height="wrap_content"-->
-    <!--android:background="@color/colorPrimary"-->
-    <!--android:fitsSystemWindows="true"-->
-    <!--app:fitType="bottom">-->
-
-    <!--</com.aliya.view.fitsys.FitWindowsFrameLayout>-->
-
-    <!--</com.aliya.view.fitsys.FitWindowsLinearLayout>-->
-
-    <!--<com.aliya.view.fitsys.FitWindowsFrameLayout-->
-    <!--android:layout_width="match_parent"-->
-    <!--android:layout_height="wrap_content"-->
-    <!--android:layout_marginTop="10dp"-->
-    <!--android:background="#f00"-->
-    <!--android:fitsSystemWindows="true"-->
-    <!--app:fitType="bottom">-->
-
-    <!--<View-->
-    <!--android:layout_width="match_parent"-->
-    <!--android:layout_height="24dp"-->
-    <!--android:background="#345667" />-->
-
-    <!--</com.aliya.view.fitsys.FitWindowsFrameLayout>-->
-
-    <!--<com.aliya.view.fitsys.FitWindowsFrameLayout-->
-    <!--android:id="@+id/fit_frame"-->
-    <!--android:layout_width="match_parent"-->
-    <!--android:layout_height="wrap_content"-->
-    <!--android:layout_marginTop="10dp"-->
-    <!--android:background="#f00">-->
-
-
-    <!--</com.aliya.view.fitsys.FitWindowsFrameLayout>-->
-
-    <!--<LinearLayout-->
-    <!--android:layout_width="match_parent"-->
-    <!--android:layout_height="wrap_content"-->
-    <!--android:background="#0f0"-->
-    <!--android:fitsSystemWindows="true"></LinearLayout>-->
+    </LinearLayout>
 
 </com.aliya.view.fitsys.FitWindowsLinearLayout>
